package com.g4.odontohub.orcamento.domain;

public enum StatusOrcamento {
    PENDENTE, APROVADO
}