@startuml

skinparam componentStyle uml2

package "'Orcamento' Aggregate" <<Rectangle>> {
	class Orcamento <<(A,#fffab8) Aggregate Root>> {
		Long planoTratamentoId
		Long pacienteId
		BigDecimal valorTotal
		Boolean complementar
		Date dataGeracao
		Date dataAprovacao
		String formaAprovacao
		OrcamentoId orcamentoId
		StatusOrcamento status
	}
	class OrcamentoId <<(V,DarkSeaGreen) Value Object>> {
		Long id
	}
	class ItemOrcamento <<(V,DarkSeaGreen) Value Object>> {
		Long procedimentoId
		String descricao
		BigDecimal valorUnitario
	}
	enum StatusOrcamento {
		PENDENTE
		APROVADO
		RECUSADO
	}
	class OrcamentoGerado <<(E,#ff9f4b) Domain Event>> {
		Long planoTratamentoId
		BigDecimal valorTotal
		OrcamentoId orcamentoId
	}
	class OrcamentoAprovado <<(E,#ff9f4b) Domain Event>> {
		Date dataAprovacao
		String formaAprovacao
		OrcamentoId orcamentoId
	}
}
Orcamento --> StatusOrcamento : status
OrcamentoGerado --> OrcamentoId : orcamentoId
OrcamentoAprovado --> OrcamentoId : orcamentoId
Orcamento --> OrcamentoId : orcamentoId


@enduml
